# 2.08.19 (60504) Jan 23, 2012
Moved the grid behind the control panel
# 2.08.18 (60491) Jan 20, 2012
Made the grid gray instead of black
# 2.08.17 (60486) Jan 20, 2012
# 2.08.16 (60085) Jan 10, 2012
# 2.08.15 (60083) Jan 10, 2012
Energy Skate Park Basics: Simsharing: #3201: Added trackIndex to distinguish from trackName
Energy Skate Park Basics: Simsharing: #3201: Added track ID's
Energy Skate Park Basics: Simsharing: #3201: Fixed location and simsharing of play area "return skater" button
Energy Skate Park Basics: Simsharing: #3201: Removed extraneous output on startup and when switching tracks
Energy Skate Park Basics: Simsharing: improved names for track buttons, see #3201
Energy Skate Park Basics: send a message when the skater bounces off a track, see #3201
Energy Skate Park Basics: Internationalize new features in ESPB like sim speed slider "slow motion" "normal"
Energy Skate Park Basics: Send a message when creating track, see #3201
Energy Skate Park Basics: renamed "restart skater" to "return skater" in order to match the button that appears in the play area
Energy Skate Park Basics: Simsharing: added message for when the skater is dragged and released, see #3201
Made spline and spline node dragging bounds respect dynamic change in window size and aspect ratio
# 2.08.14 (59924) Jan 5, 2012
Energy Skate Park Basics: Added sim sharing for skater mass, see #3201
common: Make it so the track cannot be dragged out of the rectangle (minX=0, maxX=12, maxY=8) (doesn't dynamically adjust to aspect ratios)
common: Only show the grid for y>=0
common: Moved the grid a little to the left (and the default parabola a little to the right) so the grid numbers will be to the left of the default tracks
common: Fixed: The speedometer would go into some strange behavior if the skater was left unreturned for a bit of time (the needle would just start spinning for no apparent reason).  This was caused by the skater falling off the edge of the world.