@@ -1,3 +1,4 @@
+Fixed: Parabola shifts to the left when switching tracks and switching back
 # 2.08.19 (60504) Jan 23, 2012
 Moved the grid behind the control panel
 # 2.08.18 (60491) Jan 20, 2012
